--- a/Dockerfile.main
+++ b/Dockerfile.main
@@ -13,7 +13,7 @@ RUN apt-get install -y \
     php-common \
     php-mbstring \
     composer
-# COPY ./php.ini /etc/php/7.2/apache2/php.ini
+COPY ./php.ini /etc/php/7.2/apache2/php.ini
 RUN rm -rfv /etc/apache2/sites-enabled/*.conf
 RUN rm -rfv /etc/apache2/sites-available/*.conf
 RUN rm -rfv /var/www/html/
