--- a/vhosts.conf
+++ b/vhosts.conf
@@ -2,5 +2,5 @@
 # Listen 127.0.0.1:80
 <VirtualHost *:80>
     DocumentRoot "/var/www/html"
-    ServerName www.example.com
+    ServerName arnscarpetcleaning.com
 </VirtualHost>
